--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -2,7 +2,17 @@
     width: 90%;
     height: 90%;
     background-color: white;
-    overflow-y: auto;
     position: absolute;
     padding: 30px;
 }
+
+
+
+@media (min-width: 1600px) {
+    .outer{
+        width: 80%;
+    }
+}
+
+
+
